Fix major security vulnerability

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                     class="registry reg-cb"></a>
           </div>
           <div class="col-md-5">
-            <a href="https://www.amazon.com/wedding/organize-registry/ref=as_li_ss_tl?ie=UTF8&linkCode=ll2&tag=mmedal-20&linkId=a1c90307be10227332c9a5d51e35168e"
+            <a href="https://www.amazon.com/wedding/organize-registry/ref=as_li_ss_tl?ie=UTF8&linkCode=ll2&tag=sc0e82-20&linkId=a1c90307be10227332c9a5d51e35168e"
                target="_blank"><img src="am-logo.svg"
                                     class="registry reg-a"></a>
           </div>
